finished adding icons to the grid.

--- a/ri-client/src/_variables.sass
+++ b/ri-client/src/_variables.sass
@@ -1,13 +1,13 @@
 @import '~@angular/material/theming'
 @import 'weezer.scss'
 
-$weezer-primary: mat-palette($md-blues);
-$weezer-accent:  mat-palette($md-teals, A200, A100, A400)
+$weezer-primary: mat-palette($md-teals);
+$weezer-accent:  mat-palette($md-greens, A200, A100, A400)
 
 // The warn palette is optional (defaults to red).
 $weezer-warn:    mat-palette($md-reds);
 $weezer-background: mat-palette($md-blacks);
-$weezer-foreground: mat-palette($md-greens, A200, A100, A400)
+$weezer-foreground: mat-palette($md-blues, A200, A100, A400)
 
 
 
