--- a/ri-client/src/weezer-theme.sass
+++ b/ri-client/src/weezer-theme.sass
@@ -11,13 +11,13 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$weezer-primary: mat-palette($md-blues);
+$weezer-primary: mat-palette($md-greens);
 $weezer-accent:  mat-palette($md-teals, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $weezer-warn:    mat-palette($md-reds);
 $weezer-background: mat-palette($md-blacks);
-$weezer-foreground: mat-palette($md-greens, A200, A100, A400)
+$weezer-foreground: mat-palette($md-blues, A200, A100, A400)
 
 // Create the theme object (a Sass map containing all of the palettes).
 $weezer-theme: mat-light-theme($weezer-primary, $weezer-accent, $weezer-warn);
